# player-stats

./: .gitignore  main.py  miniplot.py  pyproject.toml  samsonite_stores.csv  script.py
config/: player-stats-credentials.json.enc
player_stats/: script.py
player_stats/models/: Player.py  base_entity.py  fielder_match_day.py  league.py  player_performance.py  team.py
player_stats/services/: gcs_service.py  proxy_service.py
player_stats/spiders/: base_spider.py  league_spider.py  player_performance_spider.py  player_spider.py  team_spider.py
